@@ -30,10 +30,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.BufferedReader;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -565,9 +563,10 @@ public class ImportExportIT extends AccumuloClusterHarness {
 
     // copy files each run will "move the files" on import, allows multiple runs in IDE without
     // rebuild
-    java.nio.file.Path importDirPath = Paths.get(importDir);
+    java.nio.file.Path importDirPath = java.nio.file.Path.of(importDir);
     java.nio.file.Files.createDirectories(importDirPath);
-    FileUtils.copyDirectory(new File(dataSrc), new File(importDir));
+    FileUtils.copyDirectory(java.nio.file.Path.of(dataSrc).toFile(),
+        java.nio.file.Path.of(importDir).toFile());
 
     String table = getUniqueNames(1)[0];
 
